--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Code challenge realized in the fourth week of Launchx",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test":  "node ./node_modules/jest/bin/jest"
   },
   "repository": {
     "type": "git",
