--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Code challenge realized in the fourth week of Launchx",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest"
+    "test": "node ./node_modules/jest/bin/jest",
+    "linter": "node ./node_modules/eslint/bin/eslint.js .",
+    "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
+    "server": "node ./lib/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,10 @@
   },
   "homepage": "https://github.com/harold-barron/Launchx-semana-4-Code-Challenge#readme",
   "devDependencies": {
+    "eslint": "^8.14.0",
     "jest": "^26.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.0"
   }
 }
