--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/harold-barron/Launchx-semana-4-Code-Challenge#readme",
   "devDependencies": {
     "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^26.0.0"
   },
   "dependencies": {
