--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
     "server": "node ./lib/server.js"
+    "start": "node ./lib/server.js"
   },
   "repository": {
     "type": "git",
