--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
     "server": "node ./lib/server.js",
+    "build": "node ./lib/server.js",
     "start": "node ./lib/server.js"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "jest": "^26.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.0"
   }
 }
