--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "node ./node_modules/jest/bin/jest",
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
-    "server": "node ./lib/server.js",
-    "build": "node ./lib/server.js",
-    "start": "node ./lib/server.js"
+    "server": "node ./lib/Server.js",
+    "build": "node ./lib/Server.js",
+    "start": "node ./lib/Server.js"
   },
   "repository": {
     "type": "git",
